--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                         <!-- <input name="_redirect" type="hidden" id="name"
                             value="https://villastarrealty.netlify.app/success.html"> -->
 
-                            <input type="hidden" name="_next" value="https://remax.netlify.app/success.html">
+                            <input type="hidden" name="_next" value="https://remaxproperties.netlify.app/success.html">
 
 
                         <label for="fullname">Fullname:</label>
