--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remax</title>
+    <title>Mayjay Properties</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
     <!-- CSS -->
@@ -87,7 +87,7 @@
                         <small>Our mission is simple —</small>
                     </div>
                     <p>
-                        Welcome to Remax Properties! We are a dedicated team of real estate professionals committed to
+                        Welcome to Mayjay Properties! We are a dedicated team of real estate professionals committed to
                         helping you find your dream home or property. With years of experience in the industry, we have
                         assisted countless clients in making informed decisions and finding the perfect place to call
                         home.
@@ -230,7 +230,7 @@
                     </form>
                 </div>
             </div>
-            <p>&copy; 2023 Remax. All rights reserved.</p>
+            <p>&copy; 2023 Mayjay Properties. All rights reserved.</p>
         </main>
     </footer>
 
