--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remax | About</title>
+    <title>Mayjay Property | About</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
     <!-- CSS -->
@@ -144,7 +144,7 @@
                     </form>
                 </div>
             </div>
-            <p>&copy; 2023 Remax. All rights reserved.</p>
+            <p>&copy; 2023 Mayjay Property. All rights reserved.</p>
         </main>
     </footer>
 
